# financePlus

./: .gitignore  README.md  conftest.py  pyproject.toml
docs/: requirements_analysis.md
src/app/: app.py
src/app/controllers/: auth_controller.py  category_controller.py  login_controller.py  transaction_controller.py  user_controller.py
src/app/repositories/: category_repository.py  transaction_repository.py  user_repository.py
src/app/schemas/: category_schemas.py  transaction_schemas.py  user_schemas.py
src/app/security/: auth_middleware.py  auth_required.py  auth_utils.py  jwt_utils.py
src/app/services/: auth_service.py  category_service.py  transaction_service.py  user_service.py
tests/integration/: conftest.py  test_auth.py  test_categories.py  test_transactions.py
