[project]
name = "financeplus"
version = "0.1.0"
description = ""
authors = [
    {name = "Tharlesdev",email = "tharles291@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
black = "^25.9.0"
isort = "^6.0.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
